# splade

./: .gitignore  CMakeLists.txt  command.txt  convert.py  download.py  run_passage_retrieval.py  self_command.txt  self_qrel_reformat.py  self_test.py  test.py
SOSIA/: CMakeLists.txt  Makefile  command.txt
SOSIA/results/: Running_result.txt
SOSIA/src/: Preprocess.cpp  Preprocess.h  alg.cpp  alg.h  basis.cpp  basis.h  def.h  expe.h  fastL2_ip.h  main.cpp  method.h  performance.h  rd_stdcout.h  sosia.h
conf/index/: hotpotqa.yaml  lotte-500-gnd.yaml  lotte.yaml  quora.yaml
conf/retrieve_evaluate/: hotpotqa.yaml  lotte-500-gnd.yaml  lotte.yaml  msmarco.yaml  quora.yaml  toy.yaml
data/msmarco/: dev_qrel.json
data/msmarco/dev_queries/: raw.tsv
data/msmarco/full_collection/: raw.tsv
self_script/: transform_dataset.py
splade/: evaluate.py  retrieve.py  self_evaluate.py  self_index.py  self_retrieve.py
splade/tasks/: self_transformer_evaluator.py  transformer_evaluator.py
splade/tasks/base/: evaluator.py
